// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Layout default 1`] = `
<section
  class="arco-layout"
/>
`;

exports[`ConfigProvider componentConfig.Layout set className globally 1`] = `
<section
  class="arco-layout global-default-class"
/>
`;

exports[`ConfigProvider componentConfig.Layout set className globally and component set className itself. 1`] = `
<section
  class="arco-layout component-class"
/>
`;

exports[`ConfigProvider componentConfig.Layout set data-* property 1`] = `
<section
  class="arco-layout"
  data-test-name="Layout"
/>
`;
